--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
             "sizes": "192x192"
         }
     ],
-    "start_url": "/",
+    "start_url": "/?utm_source=a2hs",
     "background_color": "#3367D6",
     "display": "standalone",
     "scope": "/",
